# wasm-ludo

./: .gitignore  README.md  data_model.ts  index-3f69a26e5f6447e5.js  index-3f69a26e5f6447e5_bg.wasm  index-8e38b6929448383a.js  index-8e38b6929448383a_bg.wasm  index-a354990fc09c3b35.js  index-c2bbf83f619c1ca.js  index-c2bbf83f619c1ca_bg.wasm  index-ed21c2b85ea217ff.js  index-ed21c2b85ea217ff_bg.wasm  index.html  output-77efb56647e28648.css
client/: Cargo.toml  Dockerfile  Trunk.toml  default.conf.template  index.html  justfile  package-lock.json  tailwind.config.js
client/src/: main.rs  routes.rs
client/src/bindings/: mod.rs
client/src/components/: mod.rs
client/src/components/board/: mod.rs
client/src/components/board_middle/: mod.rs
client/src/components/button/: button.rs  mod.rs
client/src/components/card/: card.rs  mod.rs
client/src/context/: mod.rs
client/src/css/: output.css
client/src/macros/: classnames.rs  mod.rs
client/src/models/: color.rs  die_info.rs  game.rs  messages.rs  mod.rs  player.rs  websocket.rs
client/src/pages/: game.rs  game_join.rs  game_lobby.rs  game_setup.rs  home.rs  mod.rs  not_found.rs  test.rs
client/src/utils/: clamp.rs  get_host.rs  mod.rs  resolve_color.rs  resolve_color_class.rs
server/: Cargo.toml  Dockerfile
server/src/: main.rs
server/src/components/: mod.rs
server/src/models/: actor_messages.rs  app_data.rs  color.rs  game.rs  mod.rs  player.rs  position.rs  websocket_message.rs
server/src/types/: mod.rs
server/src/utils/: bot.rs  dice.rs  enums.rs  game.rs  mod.rs  player.rs
(+50 files in other folders)
