[package]
name = "client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
yew-router = "0.16"
wasm-bindgen = "0.2.78"
gloo = "0.6.0"
chrono = { version = "0.4.19", features = ["serde"] }
stylist = { version = "0.10.0", features = ["yew_integration"] }
serde = "1.0.136"
serde_json = "1.0.78"
