[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.21"
tokio = "1.15.0"
anyhow = "1.0.52"
serde = "1.0.133"
serde_json = "1.0.75"
dotenv = "0.15.0"
env_logger = "0.9.0"
mongodb = "2.1.0"
futures = "0.3.19"
